upgrade junit to 5 on core module